Closed Bug 1679010 Opened 4 years ago Closed 4 years ago

[mips] Some tests failed due to the change of wasm ABI

Categories

(Core :: JavaScript: WebAssembly, defect, P3)

Other
Linux
defect

Tracking

()

RESOLVED FIXED
85 Branch
Tracking Status
firefox85 --- fixed

People

(Reporter: zhaojiazhong-hf, Assigned: zhaojiazhong-hf)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: regression)

Attachments

(1 file)

User Agent: Mozilla/5.0 (X11; Linux mips64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/84.0.4147.140 Safari/537.36

Steps to reproduce:

Build js on mips64el platform, and run the jit-test.

Actual results:

Many asm/wasm tests failed, like asm.js/testFloat32:

Thread 1 "js" received signal SIGSEGV, Segmentation fault.
0x000000aaaace7ad8 in js::jit::ABIArgGenerator::increaseStackOffset (bytes=16, this=0xfffffed900) at /home/loongson/workspace/mozilla-central/js/src/jit/mips64/Assembler-mips64.h:41
41 void increaseStackOffset(uint32_t bytes) { MOZ_CRASH("NYI"); }

Expected results:

The tests should pass.

This bug is introduced by D82881, which should be ported to mips platform.

Blocks: sm-mips
OS: Unspecified → Linux
Regressed by: 1639153
Hardware: Unspecified → Other
Has Regression Range: --- → yes
Assignee: nobody → zhaojiazhong-hf
Pushed by ccoroiu@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/21c20b9488cc [MIPS] Reserve two slots after stack arguments for the future tls preservation. r=lth
Severity: -- → S3
Priority: -- → P3
Status: UNCONFIRMED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 85 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: