Bug 1679010 - [MIPS] Reserve two slots after stack arguments for the future tls preservation. r=lth

Port D82881 to mips64 platform, and remove some dead code.

Differential Revision: https://phabricator.services.mozilla.com/D97899