js/src/jit/arm/Assembler-arm.h
@@ -2189,16 +2189,6 @@ static inline bool GetTempRegForIntArg(uint32_t usedIntArgs,
   return true;
 }
 
-#if !defined(JS_CODEGEN_ARM_HARDFP) || defined(JS_SIMULATOR_ARM)
-
-static inline uint32_t GetArgStackDisp(uint32_t arg) {
-  MOZ_ASSERT(!UseHardFpABI());
-  MOZ_ASSERT(arg >= NumIntArgRegs);
-  return (arg - NumIntArgRegs) * sizeof(intptr_t);
-}
-
-#endif
-
 #if defined(JS_CODEGEN_ARM_HARDFP) || defined(JS_SIMULATOR_ARM)
 
 static inline bool GetFloat32ArgReg(uint32_t usedIntArgs,
@@ -2220,47 +2210,6 @@ static inline bool GetDoubleArgReg(uint32_t usedIntArgs, uint32_t usedFloatArgs,
   }
   *out = VFPRegister(usedFloatArgs >> 1, VFPRegister::Double);
   return true;
-}
-
-static inline uint32_t GetIntArgStackDisp(uint32_t usedIntArgs,
-                                          uint32_t usedFloatArgs,
-                                          uint32_t* padding) {
-  MOZ_ASSERT(UseHardFpABI());
-  MOZ_ASSERT(usedIntArgs >= NumIntArgRegs);
-  uint32_t doubleSlots =
-      std::max(0, (int32_t)usedFloatArgs - (int32_t)NumFloatArgRegs);
-  doubleSlots *= 2;
-  int intSlots = usedIntArgs - NumIntArgRegs;
-  return (intSlots + doubleSlots + *padding) * sizeof(intptr_t);
-}
-
-static inline uint32_t GetFloat32ArgStackDisp(uint32_t usedIntArgs,
-                                              uint32_t usedFloatArgs,
-                                              uint32_t* padding) {
-  MOZ_ASSERT(UseHardFpABI());
-  MOZ_ASSERT(usedFloatArgs >= NumFloatArgRegs);
-  uint32_t intSlots = 0;
-  if (usedIntArgs > NumIntArgRegs) {
-    intSlots = usedIntArgs - NumIntArgRegs;
-  }
-  uint32_t float32Slots = usedFloatArgs - NumFloatArgRegs;
-  return (intSlots + float32Slots + *padding) * sizeof(intptr_t);
-}
-
-static inline uint32_t GetDoubleArgStackDisp(uint32_t usedIntArgs,
-                                             uint32_t usedFloatArgs,
-                                             uint32_t* padding) {
-  MOZ_ASSERT(UseHardFpABI());
-  MOZ_ASSERT(usedFloatArgs >= NumFloatArgRegs);
-  uint32_t intSlots = 0;
-  if (usedIntArgs > NumIntArgRegs) {
-    intSlots = usedIntArgs - NumIntArgRegs;
-    // Update the amount of padding required.
-    *padding += (*padding + usedIntArgs) % 2;
-  }
-  uint32_t doubleSlots = usedFloatArgs - NumFloatArgRegs;
-  doubleSlots *= 2;
-  return (intSlots + doubleSlots + *padding) * sizeof(intptr_t);
 }
 
 #endif
